--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "next": "^12.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-sound": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.33",
+    "@types/react-sound": "^1.2.3",
     "autoprefixer": "^10.3.7",
     "postcss": "^8.3.11",
     "tailwindcss": "^2.2.17",
     "typescript": "^4.4.4"
-  }
+  },
+  "packageManager": "yarn@3.1.1"
 }
